Fix more SonarCloud code smells
- ExceptionHandlingAdvice: use Stream.toList() instead of
  collect(Collectors.toList()) and drop the now-unused Collectors import
  (java:S6204); returned list is the HTTP 422 body, never mutated
- VaultControllerTest: drop the unthrowable "throws NotFoundException" and its
  now-unused import (java:S1130)

Refs #86